objects/Deployment_Log__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merged_At__c</fullName>
        <label>Merged At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PR_Number__c</fullName>
        <label>PR Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Title__c</fullName>
        <label>PR Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_URL__c</fullName>
        <label>PR URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Components__c</fullName>
        <label>Total Components</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deployment Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEP-{0000}</displayFormat>
        <label>Deployment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>